--- a/PartyInvites/packages/repositories.config
+++ b/PartyInvites/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\EssentialTools\EssentialTools.Tests\packages.config" />
+  <repository path="..\..\EssentialTools\EssentialTools\packages.config" />
   <repository path="..\..\Razor\Razor\packages.config" />
   <repository path="..\LanguageFeatures\packages.config" />
   <repository path="..\PartyInvites\packages.config" />
