--- a/Razor/Razor/packages.config
+++ b/Razor/Razor/packages.config
@@ -10,4 +10,5 @@
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
 </packages>
