--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -25,6 +25,15 @@
     <globalization culture="en-US" uiCulture="en-US" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <authentication mode="Forms">
+      <!--timeout表示登录成功之后保持多长时间 分钟-->
+      <forms loginUrl="~/Account/Login" timeout="2880">
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="secret"/>
+        </credentials>
+      </forms>
+
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
